ensure that the spinner is always visible

--- a/examples/example.css
+++ b/examples/example.css
@@ -1,7 +1,9 @@
-.example-map p, .jumbotron p {
+.example-map p,
+.jumbotron p {
     margin: 0;
     padding: 0;
 }
+
 .example-map {
     width: 100%;
     height: 60vh;
@@ -20,7 +22,7 @@
     position: absolute;
     width: max-content;
     background-color: white;
-    box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 15px;
     border-radius: 10px;
     border: 1px solid #cccccc;
@@ -84,6 +86,7 @@
     height: 100%;
     margin: 0;
 }
+
 .fullscreen:-ms-fullscreen {
     height: 100%;
 }
@@ -104,6 +107,7 @@
     left: 40%;
     width: 20%;
     height: 20%;
+    z-index: 1000;
 }
 
 .example-spinner>img {
